--- a/Public/stylesheets/images.scss
+++ b/Public/stylesheets/images.scss
@@ -5,45 +5,45 @@
 /* Light mode images */
 
 :root {
-  --image-box: url("/images/box.svg");
-  --image-error: url("/images/error.svg");
-  --image-warning: url("/images/warning.svg");
-  --image-external-link: url("/images/external_link.svg");
-  --image-stable: url("/images/stable.svg");
-  --image-beta: url("/images/beta.svg");
-  --image-branch: url("/images/branch.svg");
-  --image-compatible: url("/images/compatible.svg");
-  --image-unknown: url("/images/unknown.svg");
-  --image-incompatible: url("/images/incompatible.svg");
-  --image-prompt: url("/images/prompt.svg");
-  --image-clock: url("/images/clock.svg");
-  --image-github: url("/images/github.svg");
-  --image-osi: url("/images/osi.svg");
-  --image-person: url("/images/person.svg");
-  --image-speech-bubble: url("/images/speech_bubble.svg");
-  --image-star: url("/images/star.svg");
+  --image-box: url('/images/box.svg');
+  --image-error: url('/images/error.svg');
+  --image-warning: url('/images/warning.svg');
+  --image-external-link: url('/images/external_link.svg');
+  --image-stable: url('/images/stable.svg');
+  --image-beta: url('/images/beta.svg');
+  --image-branch: url('/images/branch.svg');
+  --image-compatible: url('/images/compatible.svg');
+  --image-unknown: url('/images/unknown.svg');
+  --image-incompatible: url('/images/incompatible.svg');
+  --image-prompt: url('/images/prompt.svg');
+  --image-clock: url('/images/clock.svg');
+  --image-github: url('/images/github.svg');
+  --image-osi: url('/images/osi.svg');
+  --image-person: url('/images/person.svg');
+  --image-speech-bubble: url('/images/speech_bubble.svg');
+  --image-star: url('/images/star.svg');
 }
 
 /* Dark mode images */
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --image-box: url("/images/box~dark.svg");
-    --image-error: url("/images/error~dark.svg");
-    --image-warning: url("/images/warning~dark.svg");
-    --image-external-link: url("/images/external_link~dark.svg");
-    --image-stable: url("/images/stable~dark.svg");
-    --image-beta: url("/images/beta~dark.svg");
-    --image-branch: url("/images/branch~dark.svg");
-    --image-compatible: url("/images/compatible~dark.svg");
-    --image-unknown: url("/images/unknown~dark.svg");
-    --image-incompatible: url("/images/incompatible~dark.svg");
-    --image-prompt: url("/images/prompt~dark.svg");
-    --image-clock: url("/images/clock~dark.svg");
-    --image-github: url("/images/github~dark.svg");
-    --image-osi: url("/images/osi~dark.svg");
-    --image-person: url("/images/person~dark.svg");
-    --image-speech-bubble: url("/images/speech_bubble~dark.svg");
-    --image-star: url("/images/star~dark.svg");
+    --image-box: url('/images/box~dark.svg');
+    --image-error: url('/images/error~dark.svg');
+    --image-warning: url('/images/warning~dark.svg');
+    --image-external-link: url('/images/external_link~dark.svg');
+    --image-stable: url('/images/stable~dark.svg');
+    --image-beta: url('/images/beta~dark.svg');
+    --image-branch: url('/images/branch~dark.svg');
+    --image-compatible: url('/images/compatible~dark.svg');
+    --image-unknown: url('/images/unknown~dark.svg');
+    --image-incompatible: url('/images/incompatible~dark.svg');
+    --image-prompt: url('/images/prompt~dark.svg');
+    --image-clock: url('/images/clock~dark.svg');
+    --image-github: url('/images/github~dark.svg');
+    --image-osi: url('/images/osi~dark.svg');
+    --image-person: url('/images/person~dark.svg');
+    --image-speech-bubble: url('/images/speech_bubble~dark.svg');
+    --image-star: url('/images/star~dark.svg');
   }
 }
