Matrix CSS update for builds index page.

--- a/Public/stylesheets/images.scss
+++ b/Public/stylesheets/images.scss
@@ -15,6 +15,8 @@
   --image-compatible: url('/images/compatible.svg');
   --image-unknown: url('/images/unknown.svg');
   --image-incompatible: url('/images/incompatible.svg');
+  --image-succeeded: url('/images/succeeded.svg');
+  --image-failed: url('/images/failed.svg');
   --image-prompt: url('/images/prompt.svg');
   --image-clock: url('/images/clock.svg');
   --image-github: url('/images/github.svg');
@@ -38,6 +40,8 @@
     --image-compatible: url('/images/compatible~dark.svg');
     --image-unknown: url('/images/unknown~dark.svg');
     --image-incompatible: url('/images/incompatible~dark.svg');
+    --image-succeeded: url('/images/succeeded~dark.svg');
+    --image-failed: url('/images/failed~dark.svg');
     --image-prompt: url('/images/prompt~dark.svg');
     --image-clock: url('/images/clock~dark.svg');
     --image-github: url('/images/github~dark.svg');
