--- a/Public/stylesheets/matrix.scss
+++ b/Public/stylesheets/matrix.scss
@@ -1,5 +1,6 @@
 /* -------------------------------------------------------------------------
-  Compatibility matrix styles - Swift and platform version compatibility.
+  Compatibility matrix styles - This is used for both the compatibility
+  matrices on the package page, and for the full build compatibility report.
 ---------------------------------------------------------------------------- */
 
 ul.matrix {
