--- a/Public/stylesheets/matrix.scss
+++ b/Public/stylesheets/matrix.scss
@@ -99,72 +99,81 @@ ul.matrix {
     }
   }
 
-  .result {
-    > div {
-      margin: 0 3px;
-      height: 35px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-basis: 0;
-      flex-grow: 1;
-      background-position: center center;
-      background-size: 20px;
-      background-repeat: no-repeat;
-    }
+  .result > div {
+    margin: 0 3px;
+    height: 35px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-basis: 0;
+    flex-grow: 1;
+  }
 
-    // Package page compatibility matrix.
+  &.compatibility {
+    .result {
+      & > div {
+        background-size: 20px;
+        background-repeat: no-repeat;
+        background-position: center center;
+      }
 
-    .compatible {
-      background-color: var(--matrix-result-compatible-background);
-      background-image: var(--image-compatible);
-    }
+      & > .compatible {
+        background-image: var(--image-compatible);
+        background-color: var(--matrix-result-compatible-background);
+      }
 
-    .pending,
-    .unknown {
-      background-size: 12px;
-      background-color: var(--matrix-result-unknown-background);
-      background-image: var(--image-unknown);
-    }
+      & > .pending,
+      & > .unknown {
+        background-size: 12px;
+        background-image: var(--image-unknown);
+        background-color: var(--matrix-result-unknown-background);
+      }
 
-    .incompatible {
-      background-color: var(--matrix-result-incompatible-background);
-      background-image: var(--image-incompatible);
-    }
-
-    // Builds results matrix.
-
-    .succeeded > a,
-    .failed > a {
-      padding-left: 25px;
-      background-size: 18px;
-      background-position: left center;
-      background-repeat: no-repeat;
-    }
-
-    .succeeded {
-      background-color: var(--matrix-result-succeeded-background);
-
-      a {
-        background-image: var(--image-succeeded);
+      & > .incompatible {
+        background-image: var(--image-incompatible);
+        background-color: var(--matrix-result-incompatible-background);
       }
     }
+  }
 
-    .failed {
-      background-color: var(--matrix-result-failed-background);
-
-      a {
-        background-image: var(--image-failed);
+  &.builds {
+    .result > div {
+      &.succeeded > a,
+      &.failed > a {
+        padding-left: 25px;
+        background-size: 18px;
+        background-position: left center;
+        background-repeat: no-repeat;
       }
-    }
 
-    .pending > span,
-    .unknown > span {
-      padding-left: 22px;
-      background-size: 12px;
-      background-position: left center;
-      background-repeat: no-repeat;
-      background-image: var(--image-unknown);
+      &.succeeded {
+        background-color: var(--matrix-result-succeeded-background);
+
+        a {
+          background-image: var(--image-succeeded);
+        }
+      }
+
+      &.failed {
+        background-color: var(--matrix-result-failed-background);
+
+        a {
+          background-image: var(--image-failed);
+        }
+      }
+
+      &.pending,
+      &.unknown {
+        background-color: var(--matrix-result-unknown-background);
+
+        span {
+          padding-left: 22px;
+          background-size: 12px;
+          background-position: left center;
+          background-repeat: no-repeat;
+          background-image: var(--image-unknown);
+        }
+      }
     }
   }
 }
