Added the green, orange, and red base classes back.

--- a/Public/stylesheets/base.scss
+++ b/Public/stylesheets/base.scss
@@ -115,3 +115,15 @@ button {
 button:focus {
   outline: none;
 }
+
+.green {
+  color: var(--green-text);
+}
+
+.orange {
+  color: var(--orange-text);
+}
+
+.red {
+  color: var(--red-text);
+}
