--- a/Public/stylesheets/colors.scss
+++ b/Public/stylesheets/colors.scss
@@ -61,6 +61,10 @@
   --link-text: var(--mid-blue);
   --link-highlight: var(--mid-red);
 
+  --green-text: var(--light-green);
+  --orange-text: var(--orange);
+  --red-text: var(--mid-red);
+
   --blockquote-text: var(--dark-grey);
   --blockquote-border: var(--light-grey);
 
@@ -113,6 +117,8 @@
   :root {
     --page-background: var(--black);
     --page-text: var(--white);
+
+    --green-text: var(--mid-green);
 
     --blockquote-text: var(--light-grey);
     --blockquote-border: var(--dark-grey);
