I found where the table styling was used!

--- a/Public/stylesheets/readme.scss
+++ b/Public/stylesheets/readme.scss
@@ -27,4 +27,26 @@ article.readme {
   img {
     max-width: 100%;
   }
+
+  table {
+    width: 100%;
+    width: max-content;
+    max-width: 100%;
+    overflow: auto;
+    border-collapse: collapse;
+
+    th {
+      background-color: var(--table-header-background);
+    }
+
+    th,
+    td {
+      padding: 5px 10px;
+      border: 1px solid var(--grey);
+    }
+
+    tr:nth-child(2n) {
+      background-color: var(--table-row-alt-background);
+    }
+  }
 }
