--- a/Public/stylesheets/colors.scss
+++ b/Public/stylesheets/colors.scss
@@ -20,7 +20,6 @@
   --mid-red: #cc4444;
   --light-red: #ffeeee;
   --pink: #ea4aaa;
-  --light-pink: #fff2fa;
 
   --black: #1d1d1d;
   --very-very-dark-grey: #232323;
@@ -46,6 +45,7 @@
     --mid-red: #ff4343;
     --dark-red: #250201;
     --yellow: #ffb834;
+    --pink: #f44eb2;
 
     --dark-green: #0c946e;
     --mid-green: #0ebf4c;
@@ -56,8 +56,9 @@
 /* Light mode semantic colors */
 
 :root {
-  --page-background: var(--white);
   --page-text: var(--black);
+  --page-background: var(--white);
+  --popover-background: var(--very-light-grey);
   --link-text: var(--mid-blue);
   --link-highlight: var(--mid-red);
 
@@ -121,8 +122,9 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --page-background: var(--black);
     --page-text: var(--white);
+    --page-background: var(--black);
+    --popover-background: var(--very-dark-grey);
 
     --green-text: var(--mid-green);
 
