--- a/Public/stylesheets/main.scss
+++ b/Public/stylesheets/main.scss
@@ -3,6 +3,7 @@ $mobile-breakpoint: 767px;
 @import 'colors.scss';
 @import 'images.scss';
 @import 'base.scss';
+@import 'scta.scss';
 @import 'layout.scss';
 @import 'header_footer.scss';
 @import 'home.scss';
