--- a/Public/stylesheets/header_footer.scss
+++ b/Public/stylesheets/header_footer.scss
@@ -26,6 +26,8 @@ footer {
       padding: 0;
       display: flex;
       flex-direction: row;
+      flex-wrap: wrap;
+      justify-content: center;
 
       li {
         margin: 0 5px;
