More padding around the home page CTA.

--- a/Public/stylesheets/scta.scss
+++ b/Public/stylesheets/scta.scss
@@ -72,7 +72,7 @@
 }
 
 .scta {
-  margin: 0 auto;
+  margin: 10px auto;
   padding: 15px 15px 15px 60px;
   max-width: 700px;
   background-color: var(--popover-background);
