Styling for the maintainers page.

--- a/Public/stylesheets/colors.scss
+++ b/Public/stylesheets/colors.scss
@@ -85,6 +85,7 @@
   --input-background: var(--white);
   --input-text: var(--black);
   --input-placeholder: var(--light-grey);
+  --badge-input-background: var(--very-light-grey);
 
   --results-background: var(--white);
   --results-selected-background: var(--very-light-blue);
@@ -144,6 +145,7 @@
     --input-background: var(--very-dark-grey);
     --input-text: var(--white);
     --input-placeholder: var(--grey);
+    --badge-input-background: var(--very-dark-grey);
 
     --results-background: var(--very-dark-grey);
     --results-selected-background: var(--dark-blue);
