--- a/Public/stylesheets/main.scss
+++ b/Public/stylesheets/main.scss
@@ -9,6 +9,7 @@ $mobile-breakpoint: 767px;
 @import 'home.scss';
 @import 'markdown.scss';
 @import 'package.scss';
+@import 'maintainer_info.scss';
 @import 'matrix.scss';
 @import 'build_logs.scss';
 @import 'error.scss';
