Changed the code font to 14px. This doesn’t meaningfully change the size of the font in `pre` blocks, like code listings or build reports, but it looks much better when used inline.

--- a/Public/stylesheets/base.scss
+++ b/Public/stylesheets/base.scss
@@ -66,6 +66,10 @@ pre {
   overflow: scroll;
 }
 
+code {
+  font-size: 14px;
+}
+
 blockquote {
   padding: 0 15px;
   color: var(--blockquote-text);
