--- a/Resources/Styles/main.scss
+++ b/Resources/Styles/main.scss
@@ -8,7 +8,9 @@ $mobile-breakpoint: 767px;
 @import 'header_footer.scss';
 @import 'home.scss';
 @import 'markdown.scss';
+@import 'search.scss';
 @import 'package.scss';
+@import 'package_list.scss';
 @import 'maintainer_info.scss';
 @import 'matrix.scss';
 @import 'build_logs.scss';
