--- a/Resources/Styles/search.scss
+++ b/Resources/Styles/search.scss
@@ -87,3 +87,20 @@ nav form {
     display: none;
   }
 }
+
+ul.search_pagination {
+  padding: 0;
+  display: grid;
+  grid-template-columns: 0.5fr 0.5fr;
+  list-style: none;
+
+  .previous {
+    grid-column-start: 1;
+    justify-self: start;
+  }
+
+  .next {
+    grid-column-start: 2;
+    justify-self: end;
+  }
+}
