--- a/Resources/Styles/search.scss
+++ b/Resources/Styles/search.scss
@@ -88,7 +88,7 @@ nav form {
   }
 }
 
-ul.search_pagination {
+ul.pagination {
   padding: 0;
   display: grid;
   grid-template-columns: 0.5fr 0.5fr;
