Added package list selection colours.

--- a/Resources/Styles/package_list.scss
+++ b/Resources/Styles/package_list.scss
@@ -21,5 +21,9 @@
         color: var(--page-text);
       }
     }
+
+    &.selected {
+      background-color: var(--package-list-selectedbackground);
+    }
   }
 }
