Let’s have the Turbolinks progress bar match the one of the app’s colours!

--- a/Resources/Styles/base.scss
+++ b/Resources/Styles/base.scss
@@ -135,3 +135,8 @@ button:focus {
   text-align: right;
   justify-items: flex-end;
 }
+
+.turbolinks-progress-bar {
+  height: 3px;
+  background-color: var(--mid-red);
+}
