Alignment was slightly off now we have a search bar in the nav.

--- a/Resources/Styles/header_footer.scss
+++ b/Resources/Styles/header_footer.scss
@@ -27,7 +27,7 @@ footer {
       display: flex;
       flex-direction: row;
       flex-wrap: wrap;
-      justify-content: center;
+      align-items: center;
 
       li {
         margin: 0 5px;
