--- a/Resources/Styles/scta.scss
+++ b/Resources/Styles/scta.scss
@@ -18,7 +18,7 @@
   height: 30px;
   background-image: var(--image-heart);
   background-size: 25px;
-  background-position: center top 3px;
+  background-position: center center;
   background-repeat: no-repeat;
 }
 
