Basic conversion of turbolinks to turbo.

--- a/Resources/Styles/base.scss
+++ b/Resources/Styles/base.scss
@@ -136,7 +136,7 @@ button:focus {
   justify-items: flex-end;
 }
 
-.turbolinks-progress-bar {
+.turbo-progress-bar {
   height: 3px;
   background-color: var(--mid-red);
 }
