--- a/Resources/Styles/markdown.scss
+++ b/Resources/Styles/markdown.scss
@@ -2,9 +2,14 @@
   Markdown pages.
 ---------------------------------------------------------------------------- */
 
-.markdown main img {
-  margin: 40px auto;
-  display: block;
-  max-width: 90%;
-  box-shadow: 0px 3px 8px 2px rgba(100, 100, 100, 0.2);
+.markdown main {
+  picture.shadow img {
+    box-shadow: 0px 3px 8px 2px rgba(100, 100, 100, 0.2);
+  }
+
+  img {
+    margin: 40px auto;
+    display: block;
+    max-width: 90%;
+  }
 }
