Cleaned up a couple of bits of the SCTA.

--- a/Resources/Styles/colors.scss
+++ b/Resources/Styles/colors.scss
@@ -62,6 +62,8 @@
   --link-text: var(--mid-blue);
   --link-highlight: var(--mid-red);
 
+  --popover-shadow: 0 3px 6px 3px rgba(0, 0, 0, 0.1);
+
   --green-text: var(--light-green);
   --orange-text: var(--orange);
   --red-text: var(--mid-red);
