--- a/Resources/Styles/scta.scss
+++ b/Resources/Styles/scta.scss
@@ -46,14 +46,10 @@
     padding: 10px;
     width: 300px;
     left: calc(-150px + 15px); // Half the div's width - half the heart's width.
-    background-image: var(--image-scta-popover);
-    background-size: 20px;
-    background-position: center top -10px;
-    background-repeat: no-repeat;
     color: var(--page-text);
     background-color: var(--popover-background);
     border-top: 3px var(--pink) solid;
-    box-shadow: 0 3px 6px 2px rgba(0, 0, 0, 0.2);
+    box-shadow: var(--popover-shadow);
     font-size: 14px;
 
     &:before {
