--- a/Resources/Styles/package.scss
+++ b/Resources/Styles/package.scss
@@ -175,8 +175,8 @@
       position: absolute;
       margin-top: 10px;
       padding: 10px;
-      width: 300px;
-      left: -50px;
+      width: 150%;
+      left: -25%;
       color: var(--page-text);
       background-color: var(--popover-background);
       border-top: 3px var(--popover-border) solid;
@@ -194,6 +194,13 @@
         border-style: solid;
         border-width: 0 10px 10px 10px;
         border-color: transparent transparent var(--popover-border) transparent;
+      }
+    }
+
+    @media screen and (max-width: $mobile-breakpoint) {
+      #app_download_explainer {
+        width: 80%;
+        left: 10%;
       }
     }
   }
