--- a/Resources/Styles/base.scss
+++ b/Resources/Styles/base.scss
@@ -166,6 +166,13 @@ a.download {
   }
 }
 
+.announcement {
+  margin: 0;
+  padding: 16px 0;
+  background-color: var(--announcement-background);
+  text-align: center;
+}
+
 .hidden {
   opacity: 0;
   visibility: hidden;
