--- a/Resources/Styles/main.scss
+++ b/Resources/Styles/main.scss
@@ -17,3 +17,4 @@ $mobile-breakpoint: 767px;
 @import 'error.scss';
 @import 'readme.scss';
 @import 'spinner.scss';
+@import 'github-highlighting.scss';
