Styling update for the `spi-readme` element.

--- a/Resources/Styles/readme.scss
+++ b/Resources/Styles/readme.scss
@@ -2,7 +2,7 @@
   Styles specific to the readme section of the page.
 ---------------------------------------------------------------------------- */
 
-article.readme {
+spi-readme {
   overflow: hidden;
 
   h1 {
