Hide the GitHub anchor references.

--- a/Resources/Styles/readme.scss
+++ b/Resources/Styles/readme.scss
@@ -56,10 +56,7 @@ spi-readme {
   }
 
   .anchor {
-    float: left;
-    padding-right: 4px;
-    margin-left: -20px;
-    line-height: 1;
+    display: none;
   }
 
   .contains-task-list {
