Display none stopped the anchors working.

--- a/Resources/Styles/readme.scss
+++ b/Resources/Styles/readme.scss
@@ -56,7 +56,8 @@ spi-readme {
   }
 
   .anchor {
-    display: none;
+    visibility: hidden;
+    position: absolute;
   }
 
   .contains-task-list {
