Made the Markdown copy buttons more generic and added a copy button for the package collection URL to the author page.

--- a/Resources/Styles/maintainer_info.scss
+++ b/Resources/Styles/maintainer_info.scss
@@ -2,46 +2,44 @@
   Styles for the Information for Package Maintainers page.
 ---------------------------------------------------------------------------- */
 
-.badge_markdown {
+form.copyable_input {
+  display: flex;
+  flex-direction: row;
+
+  input {
+    margin: 0;
+    padding: 5px 10px 5px 5px;
+    color: var(--input-text);
+    background-color: var(--badge-input-background);
+    border: 1px var(--grey) solid;
+    border-radius: 4px 0 0 4px;
+    border-right: none;
+    font-family: monospace;
+    font-size: 12px;
+    flex-grow: 1;
+  }
+
+  input:focus {
+    outline: none;
+  }
+
+  button {
+    margin: 0;
+    padding: 0 8px;
+    color: var(--button-background); // Flipped standard colours.
+    background-color: var(--button-text);
+    border: none;
+    border-radius: 0 4px 4px 0;
+    font-size: 13px;
+    flex-shrink: 0;
+  }
+}
+
+.old {
   display: flex;
   flex-direction: row;
   align-items: center;
   margin: 8px 0 15px 0;
-
-  form {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    width: 60%;
-
-    input {
-      flex-grow: 1;
-      margin: 0;
-      padding: 5px 10px 5px 5px;
-      background-color: var(--badge-input-background);
-      color: var(--input-text);
-      border: 1px var(--grey) solid;
-      border-radius: 4px 0 0 4px;
-      border-right: none;
-      font-family: monospace;
-      font-size: 12px;
-    }
-
-    input:focus {
-      outline: none;
-    }
-
-    button {
-      margin: 0;
-      padding: 0 8px;
-      flex-shrink: 0;
-      font-size: 13px;
-      border: none;
-      border-radius: 0 4px 4px 0;
-      color: var(--button-background); // Flipped standard colours.
-      background-color: var(--button-text);
-    }
-  }
 
   img {
     margin-left: 10px;
