Extracted the copyable input styles into a new scss file.

--- a/Resources/Styles/main.scss
+++ b/Resources/Styles/main.scss
@@ -12,6 +12,7 @@ $mobile-breakpoint: 767px;
 @import 'package.scss';
 @import 'package_list.scss';
 @import 'maintainer_info.scss';
+@import 'copyable_input.scss';
 @import 'matrix.scss';
 @import 'build_logs.scss';
 @import 'error.scss';
