--- a/Resources/Styles/readme.scss
+++ b/Resources/Styles/readme.scss
@@ -77,3 +77,12 @@ spi-readme {
     margin: 20px 0;
   }
 }
+
+g-emoji {
+    font-family: Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
+    font-style: normal !important;
+    font-weight: 400;
+    line-height: 1;
+    vertical-align: -.075em;
+    margin-right: -10px;
+}
