--- a/Resources/Styles/package.scss
+++ b/Resources/Styles/package.scss
@@ -232,3 +232,33 @@ span.branch {
   color: var(--branch-text);
   background-image: var(--image-branch);
 }
+
+/* Package Tab Bar */
+.package_tabs {
+  margin-top: 10px;
+  margin-bottom: 20px;
+
+  ul {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+    display: flex;
+    gap: 10px;
+
+    li > a {
+      display: block;
+      padding: 10px;
+      border-bottom: 3px var(--sidebar-section-border) solid;
+      background-color: var(--sidebar-section-background);
+
+      &:hover {
+        background-color: var(--sidebar-section-hover);
+      }
+
+      &.active {
+        border-bottom-color: var(--stable-text);
+      }
+    }
+  }
+  
+}
