--- a/Resources/Styles/package.scss
+++ b/Resources/Styles/package.scss
@@ -35,6 +35,11 @@
           background-repeat: no-repeat;
           background-position: top 2px left;
         }
+        
+        li.history {
+          grid-column-start: span 2;
+          background-image: var(--image-clock);
+        }
 
         li.history {
           grid-column-start: span 2;
